--- a/src/app/indexer/landing-page/landing-page.component.scss
+++ b/src/app/indexer/landing-page/landing-page.component.scss
@@ -21,6 +21,35 @@
     font-weight: 100;
   }
 }
+.main-card {
+  background: #F5F6FA;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+}
+.header {
+  height: 260px;
+  background: linear-gradient(-45deg, #6d74b1, #6b6b83, #3b8d99);
+  background-size: 400% 400%;
+  animation: gradient 60s ease infinite;
+  .title {
+
+  }
+  .subtitle {
+    font-size: 24px;
+    text-transform: none;
+    font-weight: 100!important;
+  }
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .index-input-right {
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
@@ -96,6 +125,9 @@ tr {
   text-align: justify;
 }
 
+.progress {
+  background: #e8e0e0 !important;
+}
 .bs-wizard {border-bottom: solid 1px #e0e0e0; padding: 0 0 10px 0;}
 .bs-wizard > .bs-wizard-step {padding: 0; position: relative;}
 .bs-wizard > .bs-wizard-step + .bs-wizard-step {}
