--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -16,7 +16,7 @@
     <mat-card-content *ngIf="!notFound">
 
       <div class="player-cards" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">
-        <mat-card class="dense-card" fxFlex="25">
+        <mat-card class="dense-card" fxFlex="25" style="">
           <div class="card-header bg-gd-1 text-center" style="padding-bottom: 20px !important;">
             <h1 class="gd-white entity-name">
               <div class="icon-circle"><img style="height: 25px; margin-top: -5px;" src="../../assets/images/player_ico.png"/></div> {{playerName}}
@@ -221,6 +221,21 @@
                     </div>
                   </div>
                 </div>
+
+<!--                <ngx-charts-polar-chart-->
+<!--                  [view]="view"-->
+<!--                  [scheme]="colorScheme"-->
+<!--                  [legend]="true"-->
+<!--                  [showXAxisLabel]="false"-->
+<!--                  [showYAxisLabel]="false"-->
+<!--                  [xAxis]="true"-->
+<!--                  [yAxis]="true"-->
+<!--                  [xAxisLabel]="'Play style'"-->
+<!--                  [yAxisLabel]="'Rank'"-->
+<!--                  [results]="polar_chart_data"-->
+<!--                  (select)="onSelect($event)">-->
+<!--                </ngx-charts-polar-chart>-->
+
 	            </mat-card-title>
 
             </mat-tab>
@@ -306,7 +321,7 @@
 				              </div>
 			              </div>
 			              <div class="col-sm-4 hidden-xs">
-				              <img class="lib-img" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town.png" alt="Grepolis town intel">
+				              <img class="lib-img" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town_sm.png" alt="Grepolis town intel">
 				              <h5 class="gd-secondary" style="float: right;">Images copyright © InnoGames GmbH</h5>
 			              </div>
 		              </div>
