--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -6,7 +6,7 @@
 <!--Search-->
 <div class="top-container" *ngIf="!hide_search" (click)="cdr.detectChanges()" [ngClass]="{'search-shadow': !homepage && !searching_players && !searching_alliances}">
   <div fxLayout="column" fxLayout.gt-xs="row" fxLayoutGap="5px">
-    <mat-card fxFlex [ngClass]="(secondary==true)?'search-secondary search':'search'">
+    <mat-card fxFlex [ngClass]="(secondary==true)?'search-secondary search':'search'" style="box-shadow: none !important;">
       <mat-card-content>
 
         <div [ngClass]="(secondary==true)?'container':'container-fluid'">
@@ -50,7 +50,7 @@
 <!--Results-->
 <div class="" *ngIf="!hide_search && (searching_players || searching_alliances)" (click)="cdr.detectChanges()">
   <div fxLayout="column" fxLayout.gt-xs="row" fxLayoutGap="5px">
-    <mat-card fxFlex [ngClass]="(secondary==true)?'search-secondary':''" style="padding: 0 20px 20px 20px !important;">
+    <mat-card fxFlex [ngClass]="{'search-secondary':secondary==true, 'no-shadow':homepage}" style="padding: 0 20px 20px 20px !important;" >
       <mat-card-content>
 
         <div [ngClass]="{'container':secondary, 'container-fluid':!secondary, 'search-container':!mobile}">
@@ -59,16 +59,16 @@
 
             <!--Player results-->
             <div *ngIf="!mobile && searching_players" class="container-fluid">
-              <div class="row" *ngIf="hide_results">
-                <div class="btn-group" role="group" style="margin-top: 10px;">
-                  <button type="button" class="btn btn-link search-control" (click)="hide_results = false; cdr.detectChanges();">
-                    Show results <i class="fa fa-caret-down"></i>
-                  </button>
-                  <button type="button" class="btn btn-link search-control" (click)="hide_results = true; searching_players = false; cdr.detectChanges();">
-                    Close results <i class="fa fa-close"></i>
-                  </button>
-                </div>
-              </div>
+<!--              <div class="row" *ngIf="hide_results">-->
+<!--                <div class="btn-group" role="group" style="margin-top: 10px;">-->
+<!--                  <button type="button" class="btn btn-link search-control" (click)="hide_results = false; cdr.detectChanges();">-->
+<!--                    Show results <i class="fa fa-caret-down"></i>-->
+<!--                  </button>-->
+<!--                  <button type="button" class="btn btn-link search-control" (click)="hide_results = true; searching_players = false; cdr.detectChanges();">-->
+<!--                    Close results <i class="fa fa-close"></i>-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </div>-->
 
               <div *ngIf="players?.length < 1 && !loading" class="text-center">
                 <hr>
@@ -206,8 +206,7 @@
             </div>
 
             <!--Alliance results-->
-            <div *ngIf="!mobile && searching_alliances">
-              <hr>
+            <div *ngIf="!mobile && searching_alliances && !hide_results">
               <div *ngIf="alliances?.length < 1 && !loading" class="text-center">
                 <h3>No alliances found for your search <span class="gd-primary">'{{allianceInput}}'</span></h3>
               </div>
@@ -215,15 +214,15 @@
 	              <div class="col-xs-12">
 		              <h3>
 			              Found {{num_results}} <span style='color: #18BC9C;'>alliance{{num_results!=1? 's':''}}</span> for '<span style='color: #18BC9C;'>{{allianceInput}}</span>'
-			              <button *ngIf="hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = false;">
-				              Show results <i class="fa fa-caret-down"></i>
-			              </button>
+<!--			              <button *ngIf="hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = false;">-->
+<!--				              Show results <i class="fa fa-caret-down"></i>-->
+<!--			              </button>-->
 			              <button *ngIf="!hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true;">
 				              Hide results <i class="fa fa-caret-up"></i>
 			              </button>
-			              <button type="button" class="btn btn-link search-control" (click)="searching_alliances = false;">
-				              Close results <i class="fa fa-close"></i>
-			              </button>
+<!--			              <button type="button" class="btn btn-link search-control" (click)="searching_alliances = false;">-->
+<!--				              Close results <i class="fa fa-close"></i>-->
+<!--			              </button>-->
 		              </h3>
 		              <mat-spinner class="search-control" *ngIf="loading" strokeWidth="4" [diameter]="40"></mat-spinner>
 	              </div>
@@ -323,7 +322,7 @@
 	          </div>
 
             <div class="text-center" *ngIf="!mobile">
-              <button *ngIf="num_results > 0 && !hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true; cdr.detectChanges(); window.scrollTo(0, 0);">
+              <button *ngIf="num_results > 0 && !hide_results" type="button" class="btn btn-link search-control" (click)="hide_results = true; cdr.detectChanges(); scrollTop();">
                 Hide search results <i class="fa fa-caret-up"></i>
               </button>
             </div>
