Show alert if v1 index is missing registered owner

--- a/src/app/homepage/indexer-update/indexer-update.component.html
+++ b/src/app/homepage/indexer-update/indexer-update.component.html
@@ -38,7 +38,7 @@
           An additional requirement for approval was that we remove the activity heatmap feature from our website.
           The heatmap showed at which time a player gained attack points within the game.
           Due to privacy concerns, we had to remove the heatmap feature if we want to pursue approval of the city indexer script.
-          We understand that many people will miss this feature, and we apologize for having to removing it.
+          We understand that many people will miss this feature, and we apologize for having to remove it.
           That being said, the heatmap was never an accurate representation of player activity and you are often better of by using your personal intuition.
         </p>
         <h5><strong>Backwards Compatibility</strong></h5>
